--- a/src/app/components/packaging/bottles/bottles.component.html
+++ b/src/app/components/packaging/bottles/bottles.component.html
@@ -5,16 +5,31 @@
 <div class="box">
 <p>Conception de la charte graphique, choix des thèmes, couleurs et papiers en fonction du cahier des charges pour la coopérative <a href="https://montpeyroux.org/" target="_blank">Castelbarry</a></p>
 
-<img class="img-fluid montpeyroux" src="assets/images/etiq/CSBR_AVENIR_RG-ecrase.jpg" alt="Avenir">
-<img class="img-fluid montpeyroux" src="assets/images/etiq/CSBR_SALUT_TERRE_RG-ecrase.jpg" alt="Salut de la Terre">
+<input type="checkbox" id="zoomMontpeyroux1">
+  <label for="zoomMontpeyroux1">
+<img class="img-fluid montpeyroux1" src="assets/images/etiq/CSBR_AVENIR_RG-ecrase.jpg" alt="Avenir">
+</label>
+
+<input type="checkbox" id="zoomMontpeyroux2">
+  <label for="zoomMontpeyroux2">
+<img class="img-fluid montpeyroux2" src="assets/images/etiq/CSBR_SALUT_TERRE_RG-ecrase.jpg" alt="Salut de la Terre">
+</label>
 </div>
 
 
 <h4>Saint-Jean d'Aumières</h4>
 
 <div class="box">
-<img class="img-fluid aumieres" src="assets/images/etiq/jc_affranchis_rg.jpg" alt="L'affranchi">
-<img class="img-fluid aumieres" src="assets/images/etiq/jc_arnacoeur_rs.jpg" alt="L'arnacoeur">
+
+    <input type="checkbox" id="zoomAumieres1">
+        <label for="zoomAumieres1">
+            <img class="img-fluid aumieres1" src="assets/images/etiq/jc_affranchis_rg.jpg" alt="L'affranchi">
+        </label>
+
+    <input type="checkbox" id="zoomAumieres2">
+        <label for="zoomAumieres2">
+            <img class="img-fluid aumieres2" src="assets/images/etiq/jc_arnacoeur_rs.jpg" alt="L'arnacoeur">
+        </label>
 
 <p>Conception de l'étiquette avec l'insertion de gravure dorée et choix du format de la bouteille à la demande du château <a href="https://saintjeandaumieres.com/" target="_blank">Saint-Jean d'Aumières</a></p>
 </div>
