--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,12 +3,36 @@
   <div class="logo col-2">
     <a routerLink="home" (click)="changeBGtoImage($event)"><img src="assets\images\logo_ad-creativ_white.svg" alt="Logo"></a>
   </div>
-  <!-- <h1 class="display-4">Alexandra Diaz
-  <br>
-    <small class="text-muted">Designer packaging et communication</small>
-  </h1> -->
   <div class="nav col-8">
-    <app-nav></app-nav>
+    <nav>
+      <nav>
+        <div class="nav nav-tabs" id="nav-tab" role="tablist">
+          <a class="nav-item nav-link" 
+          id="nav-packaging-tab" 
+          data-toggle="tab"
+          (click)="setTitle('ADCreativ - Packaging')"
+          (click)="changeBGtoBrown($event)"
+          routerLink="packaging" 
+          role="tab" 
+          aria-controls="nav-packaging" 
+          aria-selected="false">Packaging</a>
+          <a class="nav-item nav-link" 
+          id="nav-communication-tab" 
+          data-toggle="tab" 
+          (click)="setTitle('ADCreativ - Communication')"
+          (click)="changeBGtoBrown($event)"
+          routerLink="communication" 
+          role="tab" 
+          aria-controls="nav-communication" 
+          aria-selected="false">Communication</a>
+        </div>
+      </nav>
+      <div class="tab-content" id="nav-tabContent">
+        <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"></div>
+        <div class="tab-pane fade" id="nav-packaging" role="tabpanel" aria-labelledby="nav-packaging-tab"></div>
+        <div class="tab-pane fade" id="nav-communication" role="tabpanel" aria-labelledby="nav-communication-tab"></div>
+      </div>
+    </nav>
   </div>
 </div>
 </header>
