--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -14,3 +14,13 @@
   justify-content: center;
   top: 20px;
 }
+
+a {
+  color:#696969;
+  font-size: 20px;
+}
+
+a:hover {
+  text-decoration: none;
+  color: white;
+}
