--- a/src/app/components/header/nav/nav.component.html
+++ b/src/app/components/header/nav/nav.component.html
@@ -1,14 +1,6 @@
-<nav>
+<!-- <nav>
   <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
-      <!-- <a class="nav-item nav-link active" 
-      id="nav-home-tab" 
-      data-toggle="tab"
-      (click)="setTitle('ADCreativ - Accueil')" 
-      routerLink="home" 
-      role="tab" 
-      aria-controls="nav-home" 
-      aria-selected="true">Accueil</a> -->
       <a class="nav-item nav-link" 
       id="nav-packaging-tab" 
       data-toggle="tab"
@@ -34,4 +26,4 @@
     <div class="tab-pane fade" id="nav-packaging" role="tabpanel" aria-labelledby="nav-packaging-tab"></div>
     <div class="tab-pane fade" id="nav-communication" role="tabpanel" aria-labelledby="nav-communication-tab"></div>
   </div>
-</nav>
+</nav> -->
