--- a/src/app/components/packaging/bottles/bottles.component.scss
+++ b/src/app/components/packaging/bottles/bottles.component.scss
@@ -21,22 +21,53 @@ img {
     padding-right: 40px;
 }
 
-.montpeyroux {
+#zoomMontpeyroux1, #zoomMontpeyroux2 {
+    display: none;
+  }
+
+.montpeyroux1 {
     transition: transform 0.5s ease;
     cursor: zoom-in;
-    
-    &:hover {
-        transform: translate(-40px) scale(2);
-    }
 }
-.aumieres {
+
+#zoomMontpeyroux1:checked ~ label > img {
+    transform: translate(-40px) scale(2);
+    cursor: zoom-out;
+  }
+
+  .montpeyroux2 {
     transition: transform 0.5s ease;
     cursor: zoom-in;
-    
-    &:hover {
-        transform: translate(50px) scale(2) ;
-    }
 }
+
+  #zoomMontpeyroux2:checked ~ label > img {
+    transform: translate(-40px) scale(2);
+    cursor: zoom-out;
+  }
+
+#zoomAumieres1, #zoomAumieres2 {
+    display: none;
+  }
+
+.aumieres1 {
+    transition: transform 0.5s ease;
+    cursor: zoom-in;
+}
+
+#zoomAumieres1:checked ~ label > img {
+    transform: translate(50px) scale(2);
+    cursor: zoom-out;
+  }
+
+  .aumieres2 {
+    transition: transform 0.5s ease;
+    cursor: zoom-in;
+}
+
+#zoomAumieres2:checked ~ label > img {
+    transform: translate(50px) scale(2);
+    cursor: zoom-out;
+  }
 
 .box {
     display: flex;
