--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -18,10 +18,12 @@ footer {
     cursor: pointer;
     width: 32px;
     height: 32px;
+    border-radius: 3px;
   }
 
   #instagram {
     cursor: pointer;
     width: 32px;
     height: 32px;
+    border-radius: 3px;
   }
