--- a/src/app/components/packaging/boxes/boxes.component.scss
+++ b/src/app/components/packaging/boxes/boxes.component.scss
@@ -22,22 +22,35 @@ img {
     padding-right: 40px;
 }
 
+#zoomCastelcubi {
+    display: none;
+  }
+
 .castelcubi {
     transition: transform 0.5s ease;
     cursor: zoom-in;
     
-    &:hover {
-        transform: translate(-40px) scale(2);
-    }
 }
+
+#zoomCastelcubi:checked ~ label > img {
+    transform: translate(-40px) scale(2);
+    cursor: zoom-out;
+  }
+
+  #zoomCoopains {
+    display: none;
+  }
+
 .coopains {
     transition: transform 0.5s ease;
     cursor: zoom-in;
     
-    &:hover {
-        transform: translate(40px) scale(2);
-    }
 }
+
+#zoomCoopains:checked ~ label > img {
+    transform: translate(40px) scale(2);
+    cursor: zoom-out;
+  }
 
 .box {
     display: flex;
