--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,12 +1,20 @@
 h1 {
   padding-top: 30px;
   color: white;
+  font-weight: 600;
 }
 
 p {
   color: white;
   font-size: 20px;
-  width: 50%;
+  width: 60%;
   text-align: justify;
   padding-top: 20px;
 }
+
+// #colorbox {
+// 	height: 100vh;
+// 	background: #A8E6CE;
+// 	clip-path: polygon(0 0%, 80% 0,50% 40%,0 100%);
+// 	position: relative;
+// }
