--- a/src/app/components/packaging/cardboard-pack/cardboard-pack.component.html
+++ b/src/app/components/packaging/cardboard-pack/cardboard-pack.component.html
@@ -4,15 +4,20 @@
 
 <div class="box">
 <p>Conception du format des cartons, commande et suivi de production auprès de l'imprimerie pour la coopérative <a href="https://www.rhonea.fr/" target="_blank">Rhonéa</a></p>
-
+<input type="checkbox" id="zoomRhonea">
+  <label for="zoomRhonea">
 <img class="img-fluid rhonea" src="assets/images/carton/carton-rhonea.png" alt="Carton Rhonéa">
+</label>
 </div>
 
 
 <h4>Daronton</h4>
 
 <div class="box">
+    <input type="checkbox" id="zoomDaronton">
+  <label for="zoomDaronton">
 <img class="img-fluid daronton" src="assets/images/carton/carton-daronton.jpg" alt="Carton Daronton">
+    </label>
 
 <p>Conception du graphisme et choix de la typographie des cartons à la demande du <a href="http://www.terroirdaronton.fr/" target="_blank">Terroir Daronton</a></p>
 </div>
