--- a/src/app/components/packaging/olive-oil/olive-oil.component.html
+++ b/src/app/components/packaging/olive-oil/olive-oil.component.html
@@ -5,14 +5,20 @@
 <div class="box">
 <p>Conception du format et du graphisme d'étiquettes d'huile d'olive, choix des couleurs pour la coopérative <a href="https://www.rhonea.fr/" target="_blank">Rhonéa</a></p>
 
+<input type="checkbox" id="zoomRhonea">
+  <label for="zoomRhonea">
 <img class="img-fluid rhonea" src="assets/images/HO/Rhonea-HO-bouchon.png" alt="Huile d'Olive Rhonéa">
+    </label>
 </div>
 
 
 <h4>Château Saint Louis La Perdrix</h4>
 
 <div class="box">
+    <input type="checkbox" id="zoomPerdrix">
+  <label for="zoomPerdrix">
 <img class="img-fluid perdrix" src="assets/images/HO/SLP-HO-50.png" alt="Huile d'Olive Saint Louis">
+    </label>
 
 <p>Conception du graphisme et choix de la typographie de l'étiquette de l'huile d'olive pour le Château <a href="https://saintlouislaperdrix.com/" target="_blank">Saint Louis La Perdrix</a></p>
 </div>
