--- a/src/app/components/packaging/olive-oil/olive-oil.component.scss
+++ b/src/app/components/packaging/olive-oil/olive-oil.component.scss
@@ -21,22 +21,32 @@ img {
     padding-right: 40px;
 }
 
+#zoomRhonea {
+    display: none;
+  }
 
 .rhonea {
     transition: transform 0.5s ease;
     cursor: zoom-in;
-    
-    &:hover {
-        transform: translate(-40px) scale(2);
-    }
 }
+
+#zoomRhonea:checked ~ label > img {
+    transform: translate(-40px) scale(2);
+    cursor: zoom-out;
+  }
+
+#zoomPerdrix {
+    display: none;
+  }
+
 .perdrix {
     transition: transform 0.5s ease;
     cursor: zoom-in;
-    
-    &:hover {
-        transform: translate(40px) scale(2);
-    }
+}
+
+#zoomPerdrix:checked ~ label > img {
+    transform: translate(40px) scale(2);
+    cursor: zoom-out;
 }
 
 .box {
