--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,11 @@
 <footer>
-<!-- <a routerLink="legalNotice">Mentions légales</a> -->
+
+<!-- Interpolation de la variable "currentYear" (qui stocke l'année en cours) pour mettre à jour le copyright de façon dynamique: -->
+
 <p><sup>&copy;</sup>Alexandra Diaz - {{currentYear}}</p>
+
+<!-- Icones des réseaux sociaux avec des liens pour rediriger vers les profils de la cliente - les pages s'ouvrent sur un nouvel onglet: -->
+
 <a href="https://www.facebook.com/alexandra.diaz.39982631?fref=pymk_rhc" target= "_blank"><img id="facebook" src="assets/images/facebook.svg" alt="Facebook icon"></a>
 <a href="https://www.instagram.com/namastalex/?hl=fr" target= "_blank"><img id="instagram" src="assets/images/instagram.svg" alt="Instagram icon"></a>
 
