--- a/src/app/components/packaging/bottles/bottles.component.scss
+++ b/src/app/components/packaging/bottles/bottles.component.scss
@@ -74,3 +74,10 @@ img {
     align-items:center;
     width: 80%;
 }
+
+@media screen and (max-width: 640px){
+  .box{
+    display: block;
+    width: 100%;
+  }
+}
