--- a/src/app/components/packaging/cardboard-pack/cardboard-pack.component.scss
+++ b/src/app/components/packaging/cardboard-pack/cardboard-pack.component.scss
@@ -54,3 +54,16 @@ img {
     align-items:center;
     width: 80%;
 }
+
+@media screen and (max-width: 640px){
+    .box{
+      display: block;
+      width: 100%;
+    }
+  }
+  
+  @media screen and (min-width: 900px){
+    .box{
+      width: 25%;
+    }
+  }
