--- a/src/app/components/clients/clients.component.scss
+++ b/src/app/components/clients/clients.component.scss
@@ -20,3 +20,10 @@ img {
     margin-bottom: 30px;
     border-radius: 5px;
 }
+
+@media screen and (max-width: 640px){
+    td{
+      display: block;
+      width: 100%;
+    }
+  }
