--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -14,3 +14,9 @@ button {
     margin-top: 20px;
     float: right;
 }
+
+@media screen and (max-width: 640px){
+    form{
+      width: 90%;
+    }
+  }
