formulaire de contact fonctionnel

--- a/src/app/components/agenda/agenda.component.html
+++ b/src/app/components/agenda/agenda.component.html
@@ -1,3 +1,16 @@
-<p>
-  agenda works!
-</p>
+<h2>Agenda des salons</h2>
+
+<p>Voici mes prochaines participations à des salons professionnels autour du vin:</p>
+
+<table>
+  <th>Nom</th>
+  <th>Lieu</th>
+  <th>Ville</th>
+  <th>Date</th>
+  <tr>
+    <td>1</td>
+    <td>2</td>
+    <td>3</td>
+    <td>4</td>
+  </tr>
+</table>
