--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,5 +1,5 @@
 h2 {
-    color: white;
+    color: #A8E6CE;
 }
 
 form {
@@ -10,9 +10,18 @@ form {
     margin-top: 20px;
 }
 
+label {
+    color: white;
+    margin-top: 20px;
+}
+
 button {
     margin-top: 20px;
     float: right;
+}
+
+#successmsg {
+    margin-top: 65px;
 }
 
 @media screen and (max-width: 640px){
