affichage salons page agenda

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,12 +17,7 @@
     [animate]="_animate"
     [trapFocus]="_trapFocus"
     [autoFocus]="_autoFocus"
-    [ariaLabel]="'My sidebar'"
-    (onOpenStart)="_onOpenStart()"
-    (onOpened)="_onOpened()"
-    (onCloseStart)="_onCloseStart()"
-    (onClosed)="_onClosed()"
-    (onTransitionEnd)="_onTransitionEnd()">
+    [ariaLabel]="'My sidebar'">
 
     <a closeSidebar>
     <!-- <button type="button" class="close" aria-label="Close">
