--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
 <div class="row">
   <div class="logo col-2">
-    <a routerLink="home" (click)="changeBGtoImage($event)"><img src="assets\images\logo_ad-creativ_white.svg" alt="Logo"></a>
+    <a routerLink="home" (click)="changeBGtoImage($event)"><img id="logoimg" src="assets\images\logo_ad-creativ_white.svg" alt="Logo"></a>
   </div>
   <div class="nav col-8">
     <nav>
