--- a/src/app/components/agenda/agenda.component.scss
+++ b/src/app/components/agenda/agenda.component.scss
@@ -2,16 +2,25 @@ h2 {
     color: #A8E6CE;
     padding-top: 30px;
     padding-bottom: 30px;
+font-variant-caps: all-petite-caps;
 }
 
 table {
     color: white;
 
     td {
-        padding-right: 20px;
+        padding: 20px;
+        
+    }
+
+    th {
+        text-align: center;
+        color: #A8E6CE;
     }
 }
 
-p {
+h4 {
     color: white;
+    text-align: center;
+    margin: 30px;
 }
