--- a/src/app/components/alexandra/alexandra.component.scss
+++ b/src/app/components/alexandra/alexandra.component.scss
@@ -1,3 +1,18 @@
+h2 {
+    color: #A8E6CE;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+h3 {
+    color: white;  
+}
+
+label {
+    color: white; 
+    padding-top: 30px;
+}
+
 form {
     width: 50%;
 }
