--- a/src/app/components/agenda/agenda.component.scss
+++ b/src/app/components/agenda/agenda.component.scss
@@ -7,6 +7,8 @@ font-variant-caps: all-petite-caps;
 
 table {
     color: white;
+    margin-left:auto; 
+    margin-right:auto;
 
     td {
         padding: 20px;
@@ -24,3 +26,9 @@ h4 {
     text-align: center;
     margin: 30px;
 }
+
+@media screen and (max-width: 640px){
+    tr{
+      width: 100%;
+    }
+  }
