--- a/src/app/components/alexandra/alexandra.component.scss
+++ b/src/app/components/alexandra/alexandra.component.scss
@@ -1,11 +1,11 @@
 h2 {
     color: #A8E6CE;
     padding-top: 30px;
-    padding-bottom: 30px;
 }
 
 h3 {
-    color: white;  
+    color: white;
+    margin: 80px;
 }
 
 label {
@@ -18,12 +18,32 @@ form {
 }
 
 .form-control {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 button {
     margin-top: 20px;
     float: right;
+}
+
+table {
+    color: white;
+    margin-left:auto; 
+    margin-right:auto;
+
+    td {
+        padding: 20px; 
+    }
+
+    th {
+        text-align: center;
+        color: #A8E6CE;
+    }
+}
+
+.icon {
+    width: 40px;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 640px){
