--- a/src/app/components/alexandra/alexandra.component.scss
+++ b/src/app/components/alexandra/alexandra.component.scss
@@ -46,6 +46,10 @@ table {
     cursor: pointer;
 }
 
+#create_success {
+    margin: 80px;
+}
+
 @media screen and (max-width: 640px){
     form{
       width: 90%;
