mise en forme page login

--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -8,4 +8,6 @@
 <label for="name">Mot de passe</label>
 <input type="password" class="form-control" formControlName="password" id="password">
 
+<button type = "submit" class="btn btn-light">Connexion</button>
+
 </form>
