correction bug login et bug routing edit_salon

--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -8,6 +8,10 @@
 <label for="name">Mot de passe</label>
 <input type="password" class="form-control" formControlName="password" id="password">
 
-<button type = "submit" class="btn btn-light">Connexion</button>
+<button type="submit" class="btn btn-light">Connexion</button>
 
 </form>
+
+<div *ngIf="authError" id="authError_msg" class="alert alert-danger">
+    {{ authError.message }}
+ </div> 
