--- a/src/app/components/legal-notice/legal-notice.component.html
+++ b/src/app/components/legal-notice/legal-notice.component.html
@@ -1,6 +1,16 @@
 <h2>AD-Creativ</h2>
 
+<div class="box">
+
+<div id="text">
 <p>Responsable : Alexandra Diaz</p>
 <p>Adresse : 30, rue des Crocus - 34070 Montpellier</p>
 <p>Tél : 06 64 93 77 10</p>
 <!-- <p>Email : <a href="mailto:alexandra@ad-creativ.com">alexandra@ad-creativ.com</a></p> -->
+</div>
+
+<div id="map">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2889.5745374774833!2d3.879625415048268!3d43.594577679123404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b6afbec0a6a6d5%3A0x5f1ad3de8ca3ff9!2s30%20Rue%20des%20Crocus%2C%2034000%20Montpellier!5e0!3m2!1sfr!2sfr!4v1581676370890!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+</div>
+
+</div>
