--- a/src/app/edit-salon/edit-salon.component.html
+++ b/src/app/edit-salon/edit-salon.component.html
@@ -1,6 +1,6 @@
 <h2>Mon agenda</h2>
 
-<h3>Éditer le salon:</h3>
+<h3>Éditer le salon: {{salon.name}}</h3>
 
 <form [formGroup]="editForm" (ngSubmit)="edit()">
 
