--- a/src/app/components/legal-notice/legal-notice.component.scss
+++ b/src/app/components/legal-notice/legal-notice.component.scss
@@ -12,3 +12,28 @@ p {
     align-items:center;
     gap: 50px;
 }
+
+@media screen and (max-width: 640px){
+    .box{
+      display: block;
+      width: 100%;
+    }
+}
+
+#map {
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+
+    iframe {
+        left:0;
+        padding-right: 10px;
+        top:0;
+        height:100%;
+        width:100%;
+        position:absolute;
+        }
+    }
+    
+ 
