--- a/src/app/components/packaging/boxes/boxes.component.scss
+++ b/src/app/components/packaging/boxes/boxes.component.scss
@@ -20,37 +20,38 @@ img {
     height: 300px;
     width: auto;
     padding-right: 40px;
+    cursor: pointer;
 }
 
-#zoomCastelcubi {
-    display: none;
-  }
+// #zoomCastelcubi {
+//     display: none;
+//   }
 
-.castelcubi {
-    transition: transform 0.5s ease;
-    cursor: zoom-in;
+// .castelcubi {
+//     transition: transform 0.5s ease;
+//     cursor: zoom-in;
     
-}
+// }
 
-#zoomCastelcubi:checked ~ label > img {
-    transform: translate(-40px) scale(2);
-    cursor: zoom-out;
-  }
+// #zoomCastelcubi:checked ~ label > img {
+//     transform: translate(-40px) scale(2);
+//     cursor: zoom-out;
+//   }
 
-  #zoomCoopains {
-    display: none;
-  }
+//   #zoomCoopains {
+//     display: none;
+//   }
 
-.coopains {
-    transition: transform 0.5s ease;
-    cursor: zoom-in;
+// .coopains {
+//     transition: transform 0.5s ease;
+//     cursor: zoom-in;
     
-}
+// }
 
-#zoomCoopains:checked ~ label > img {
-    transform: translate(40px) scale(2);
-    cursor: zoom-out;
-  }
+// #zoomCoopains:checked ~ label > img {
+//     transform: translate(40px) scale(2);
+//     cursor: zoom-out;
+//   }
 
 .box {
     display: flex;
