--- a/src/app/components/packaging/boxes/boxes.component.html
+++ b/src/app/components/packaging/boxes/boxes.component.html
@@ -5,20 +5,24 @@
 <div class="box">
 <p>Conception du format et du graphisme des cubis de vin, choix des couleurs pour la coopérative <a href="https://www.rhonea.fr/" target="_blank">Rhonéa</a></p>
 
-<input type="checkbox" id="zoomCastelcubi">
+<!-- <input type="checkbox" id="zoomCastelcubi">
   <label for="zoomCastelcubi">
 <img class="img-fluid castelcubi" src="assets/images/bib/castecubi10rg_.png" alt="Castelcubi">
-</label>
+</label> -->
+
+<img src="{{album[0].thumb}}" (click)="open(0)" height= "300px" alt="Castelcubi"/>
 </div>
 
 
 <h4>Les Coopains</h4>
 
 <div class="box">
-    <input type="checkbox" id="zoomCoopains">
+    <!-- <input type="checkbox" id="zoomCoopains">
   <label for="zoomCoopains">
 <img class="img-fluid coopains" src="assets/images/bib/Castelbarry-BIB-3L-Les-Coopains.png" alt="Les Coopains">
-</label>
+</label> -->
+
+<img src="{{album[1].thumb}}" (click)="open(1)" height= "300px" alt="Les Coopains"/>
 
 <p>Conception du graphisme et choix de la typographie des cartons à la demande du <a href="http://www.terroirdaronton.fr/" target="_blank">Terroir Daronton</a></p>
 </div>
